[package]
name = "rns_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
assert_approx_eq = "1.1.0"
csv = "1.1.6"
approx = "0.5.0"
# rayon = "1.5.1"
ndarray-csv = "0.5.1"
# plotly = { version = "0.6", features = ["kaleido"] }
plotly = {git = "https://github.com/igiagkiozis/plotly", branch = "dev", features = ["kaleido"] }



[profile.release]
debug = true